src/objects/Segment__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <formula>ADCVD_Case__r.Name</formula>
        <label>ADCVD Case Number Text Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <formula>TEXT(ADCVD_Case__r.ADCVD_Case_Type__c)</formula>
        <label>ADCVD Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Access_Barcode__c</fullName>
        <label>Access Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Amend_Final_Concurrence_to_DAS__c</fullName>
        <label>Actual Amend Final Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Amend_Final_Issues_to_DAS__c</fullName>
        <label>Actual Amend Final Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Amended_Final_Signature__c</fullName>
        <description>Actual Amended Final Signature</description>
        <inlineHelpText>Actual Amended Final Signature</inlineHelpText>
        <label>Actual Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Date_of_Decision_on_HoP__c</fullName>
        <description>Actual date of Decision on How to Proceed</description>
        <inlineHelpText>Actual date of Decision on How to Proceed</inlineHelpText>
        <label>Actual date of Decision - How to Proceed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Decision_on_HOP_Concurrence_toDAS__c</fullName>
        <label>Actual Decision on HOP Concurrence toDAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Decision_on_HOP_Issues_to_DAS__c</fullName>
        <label>Actual Decision on HOP Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Concurrence_to_DAS__c</fullName>
        <label>Actual Final Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Issues_to_DAS__c</fullName>
        <label>Actual Final Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Signature__c</fullName>
        <description>Actual Final Signature</description>
        <inlineHelpText>Actual Final Signature</inlineHelpText>
        <label>Actual Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Concurrence_to_DAS__c</fullName>
        <label>Actual Initiation Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Issues_to_DAS__c</fullName>
        <label>Actual Initiation Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Signature__c</fullName>
        <label>Actual Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Prelim_Concurrence_to_DAS__c</fullName>
        <label>Actual Prelim Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Prelim_Issues_to_DAS__c</fullName>
        <label>Actual Prelim Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Preliminary_Signature__c</fullName>
        <description>Actual Preliminary Signature</description>
        <inlineHelpText>Actual Preliminary Signature</inlineHelpText>
        <label>Actual Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Revocation_or_Continuation_FR__c</fullName>
        <label>Actual Revocation or Continuation FR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adequacy_Determination_Letter__c</fullName>
        <description>Adequacy determination and letter to ITC if not adequate or if no adequate respondent.</description>
        <label>Adequacy Determination &amp; Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adequacy_Determination_Letter_to_ITC__c</fullName>
        <description>Adequacy determination and letter to ITC if not adequate or if no adequate respondent.</description>
        <label>Adequacy Determination &amp; Letter to ITC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adequacy_of_Respondents_Submission__c</fullName>
        <label>Adequacy of Respondents Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inadequate or Non-Substantive</fullName>
                </value>
                <value>
                    <fullName>Adequate or Substantive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adequate_after_Determination__c</fullName>
        <label>Adequate after Determination?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adequate_after_Reconsideration__c</fullName>
        <label>Adequate after Reconsideration?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administrative_Review_Aligned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Administrative Review Aligned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>New Shipper Review</value>
            </filterItems>
            <filterItems>
                <field>Segment__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Administrative Review</value>
            </filterItems>
            <filterItems>
                <field>$Source.ADCVD_Order__c</field>
                <operation>equals</operation>
                <valueField>Segment__c.ADCVD_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Aligned New Shipper Reviews</relationshipLabel>
        <relationshipName>Aligned_New_Shipper_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_parties_in_agreement_to_the_outcome__c</fullName>
        <description>Are all parties in agreement as to the outcome?</description>
        <inlineHelpText>Are all parties in agreement as to the outcome?</inlineHelpText>
        <label>All parties in agreement to the outcome?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amend_Final_Concurrence_Due_to_DAS__c</fullName>
        <label>Amend Final Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amend_Final_Issues_Due_to_DAS__c</fullName>
        <label>Amend Final Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amended_Final_Announcement_Date__c</fullName>
        <label>Amended Final Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anniversary_Month__c</fullName>
        <label>Anniversary Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Accepted__c</fullName>
        <label>Application Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Properly_Filed_and_Served__c</fullName>
        <label>Application Properly Filed and Served</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <formula>IF(NOT(ISNULL(ADCVD_Order__c)), ADCVD_Order__r.CBP_Case_Number__c , Suspension_Agreement__r.CBP_Case_Number__c )</formula>
        <label>CBP Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Amended_Final_Signature__c</fullName>
        <description>Calculated Amended Final Signature</description>
        <inlineHelpText>Calculated Amended Final Signature</inlineHelpText>
        <label>Calculated Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Final_FR_Signature__c</fullName>
        <label>Calculated Final FR Publication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Final_Signature__c</fullName>
        <description>Calculated Final Signature</description>
        <inlineHelpText>Calculated Final Signature</inlineHelpText>
        <label>Calculated Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Initiation_Signature__c</fullName>
        <label>Calculated Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Preliminary_Signature__c</fullName>
        <description>Calculated Preliminary Signature</description>
        <inlineHelpText>Calculated Preliminary Signature</inlineHelpText>
        <label>Calculated Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Revocation_or_Continuation_FR__c</fullName>
        <label>Calculated Revocation or Continuation FR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Briefs_Due__c</fullName>
        <label>Case Briefs Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Choose_Following_Respondent_Selection__c</fullName>
        <description>Will you use CBP data, Quantity and Value Questionnaires or Other for respondent selection?</description>
        <inlineHelpText>Will you use CBP data, Quantity and Value Questionnaires or Other for respondent selection?</inlineHelpText>
        <label>Choose Following Respondent Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_on_Adequacy_Determination_Filed__c</fullName>
        <label>Comments on Adequacy Determination Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Commodity__c)</formula>
        <label>Commodity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuation_or_Revocation__c</fullName>
        <label>Continuation or Revocation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countervailed_Programs__c</fullName>
        <description>Countervailed Programs</description>
        <inlineHelpText>Countervailed Programs</inlineHelpText>
        <label>Countervailed Programs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_in_which_factors_were_valued__c</fullName>
        <description>Country in which factors were valued</description>
        <inlineHelpText>Country in which factors were valued</inlineHelpText>
        <label>Country in which factors were valued</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deadline_for_Decision_on_How_to_Proceed__c</fullName>
        <description>Deadline for Decision on How to Proceed</description>
        <inlineHelpText>Deadline for Decision on How to Proceed</inlineHelpText>
        <label>Deadline for Decision on How to Proceed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_on_HOP_Concurrence_Due_to_DAS__c</fullName>
        <label>Decision on HOP Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_on_HOP_Issues_Due_to_DAS__c</fullName>
        <label>Decision on HOP Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_on_How_to_Proceed__c</fullName>
        <label>Decision on How to Proceed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formal</fullName>
                </value>
                <value>
                    <fullName>Informal</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deficient_or_Withdrawn_Date__c</fullName>
        <label>Deficient or Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_Review_Involve_CCR__c</fullName>
        <label>Does the Review Involve CCR?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Party_File_Substan_Response__c</fullName>
        <label>Domestic Party File Substan. Response?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_if_revoked__c</fullName>
        <label>Effective Date (if revoked)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Announcement_Date__c</fullName>
        <label>Final Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Concurrence_Due_to_DAS__c</fullName>
        <label>Final Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Date_of_Anniversary_Month__c</fullName>
        <description>Final Date of Anniversary Month</description>
        <inlineHelpText>Final Date of Anniversary Month</inlineHelpText>
        <label>Final Date of Anniversary Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Extension_Remaining__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
&apos;Administrative_Review&apos;, 
 IF( Prelim_Extension__c = 0 &amp;&amp;  ISNULL(Actual_Preliminary_Signature__c) , 
     60 - Final_Extension_of_days__c, 
     IF( Prelim_Extension__c = 0 &amp;&amp;  NOT(ISNULL(Actual_Preliminary_Signature__c)) , 
         180 - Final_Extension_of_days__c, 
         60 - Final_Extension_of_days__c)) ,
&apos;Anti_Circumvention_Review&apos;, 180 - Final_Extension_of_days__c , 
&apos;Expedited_Review&apos;, 60 - Final_Extension_of_days__c , 
&apos;New_Shipper_Review&apos;, 60 - Final_Extension_of_days__c , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Extension Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Extension_of_days__c</fullName>
        <description>Final Extension (# of days)</description>
        <inlineHelpText>If &quot;Preliminary Extension (# of days)&quot; + &quot;Final Extension (# of days)&quot; &gt; 45 days, it is considered late.</inlineHelpText>
        <label>Final Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Issues_Due_to_DAS__c</fullName>
        <label>Final Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Team_Meeting_Deadline__c</fullName>
        <description>Final Team Meeting Deadline</description>
        <inlineHelpText>Final Team Meeting Deadline</inlineHelpText>
        <label>Final Team Meeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HTS_Changes__c</fullName>
        <label>HTS Change(s)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Custom_Instruction_been_sent__c</fullName>
        <description>Have Custom Instructions been sent?</description>
        <label>Have Custom Instruction been sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_if_Requested__c</fullName>
        <label>Hearing (if Requested)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ITC_Vote_on_Continuation_or_Revocation__c</fullName>
        <label>ITC Vote on Continuation or Revocation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inadequate_Domestic_Response_note_to_ITC__c</fullName>
        <label>Inadequate Domestic Response note to ITC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inform_Cluster_Coordinator_if_No_Respons__c</fullName>
        <label>Inform Cluster Coordinator if No Respons</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Announcement_Date__c</fullName>
        <label>Initiation Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Concurrence_Due_to_DAS__c</fullName>
        <label>Initiation Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Extension_Remaining__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
&apos;Anti_Circumvention_Review&apos;, 45 - Initiation_Extension_of_days__c ,
&apos;Changed_Circumstances_Review&apos;, 45 - Initiation_Extension_of_days__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiation Extension Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiation_Extension_of_days__c</fullName>
        <label>Initiation Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiation_Issues_Due_to_DAS__c</fullName>
        <label>Initiation Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Injunction__c</fullName>
        <label>Injunction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intent_to_Participate_by_Domestic_IPs__c</fullName>
        <label>Intent to Participate by Domestic IPs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_the_review_being_rescinded__c</fullName>
        <description>Is the review being rescinded?</description>
        <inlineHelpText>Is the review being rescinded?</inlineHelpText>
        <label>Is the review being rescinded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_review_expedited__c</fullName>
        <description>Is this review expedited?</description>
        <inlineHelpText>Is this review expedited?</inlineHelpText>
        <label>Is this review expedited?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Liquidation_Revocation_Instruction__c</fullName>
        <description>Issue Liquidation/Revocation Instructions, if Order is revoked</description>
        <inlineHelpText>Issue Liquidation/Revocation Instructions, if Order is revoked</inlineHelpText>
        <label>Issue Liquidation/Revocation Instruction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp; Id,  Segment_Name__c , &apos;_self&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Hold_Expiration_Date__c</fullName>
        <label>Litigation Hold Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Litigation_Resolved__c</fullName>
        <label>Litigation Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_Status__c</fullName>
        <label>Litigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_YesNo__c</fullName>
        <label>Litigation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_History_Data__c</fullName>
        <description>Lotus Notes History Data</description>
        <inlineHelpText>Lotus Notes History Data</inlineHelpText>
        <label>Lotus Notes History Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_Litigation_ID__c</fullName>
        <label>Lotus Notes Litigation ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memorandum_on_Adequacy_Determination__c</fullName>
        <label>Memorandum on Adequacy Determination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minesterial_Error_for_final__c</fullName>
        <description>Do you have a Ministerial Error for Final?</description>
        <inlineHelpText>Do you have a Ministerial Error for Final?</inlineHelpText>
        <label>Ministerial Error for Final</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Shipper_Sync_Level__c</fullName>
        <label>New Shipper Sync Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Announcement_Date__c</fullName>
        <label>Next Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Due_to_DAS_Deadline__c</fullName>
        <description>Next Due to DAS Deadline and Timeline on Segment</description>
        <inlineHelpText>Next Due to DAS Deadline and Timeline on Segment</inlineHelpText>
        <label>Next Due to DAS Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Major_Deadline__c</fullName>
        <description>Next Major AS/DAS Deadline and Timeline on Segment</description>
        <inlineHelpText>Next Major AS/DAS Deadline and Timeline on Segment</inlineHelpText>
        <label>Next Major Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Office_Deadline__c</fullName>
        <description>Next Office/PM Deadline and Timeline on Segment</description>
        <inlineHelpText>Next Office/PM Deadline and Timeline on Segment</inlineHelpText>
        <label>Next Office Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice_of_Intent_to_Participate__c</fullName>
        <label>Notice of Intent to Participate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice_of_intent_to_participate_Ips__c</fullName>
        <description>Was notice of intent to participate by domestic IPs filed?</description>
        <label>Notice of intent to participate Ips?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_of_ITC_of_Inadequate_Resp__c</fullName>
        <description>Notification to ITC of inadequate response; institure 90-day revocation</description>
        <inlineHelpText>Notification to ITC of inadequate response; institure 90-day revocation</inlineHelpText>
        <label>Notification of ITC of Inadequate Resp.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_Cluster_Coordinator_No_Interest__c</fullName>
        <label>Notify Cluster Coordinator No Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_ITC_If_Affirmative_Prelim_Determ__c</fullName>
        <label>Notify ITC If Affirmative Prelim Determ.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_ITC_of_Final_Results__c</fullName>
        <label>Notify ITC of Final Results</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_ITC_of_No_Domestic_Interest__c</fullName>
        <label>Notify ITC of No Domestic Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Companies_Requested__c</fullName>
        <description>Number of Companies Requested</description>
        <inlineHelpText>Number of Companies Requested</inlineHelpText>
        <label>Number of Companies Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Mandatory_Companies__c</fullName>
        <description>Number of Mandatory Companies</description>
        <inlineHelpText>Number of Mandatory Companies</inlineHelpText>
        <label>Number of Mandatory Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_SR_Companies__c</fullName>
        <description>Number of SR Companies</description>
        <inlineHelpText>Number of SR Companies</inlineHelpText>
        <label>Number of SR Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Office, which is assigned for the Segment</description>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
                <value>
                    <fullName>VIII</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Covered_End_Date__c</fullName>
        <description>Period Covered - End Date</description>
        <inlineHelpText>Period Covered - End Date</inlineHelpText>
        <label>Period Covered - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Covered_Start_Date__c</fullName>
        <description>Period Covered - Start Date</description>
        <inlineHelpText>Period Covered - Start Date</inlineHelpText>
        <label>Period Covered - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Concurrence_Due_to_DAS__c</fullName>
        <label>Prelim Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Extension__c</fullName>
        <label>Prelim Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelim_Issues_Due_to_DAS__c</fullName>
        <label>Prelim Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Team_Meeting_Deadline__c</fullName>
        <description>Prelim Team Meeting Deadline</description>
        <inlineHelpText>Prelim Team Meeting Deadline</inlineHelpText>
        <label>Prelim Team Meeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Announcement_Date__c</fullName>
        <label>Preliminary Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Determination__c</fullName>
        <label>Preliminary Determination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preliminary_Extension_Remaining__c</fullName>
        <formula>CASE( RecordType.DeveloperName ,
 &apos;Administrative_Review&apos;, 120 - Prelim_Extension__c,
 &apos;Expedited_Review&apos;, 120 - Prelim_Extension__c ,
 &apos;New_Shipper_Review&apos;, 120 - Prelim_Extension__c ,
 &apos;Sunset_Review&apos;, 90 - Prelim_Extension__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preliminary Extension Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text_Value__c</fullName>
        <label>Product Short Name Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <formula>(ADCVD_Case__r.Product_Short_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text_Value__c</fullName>
        <label>Product Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>(ADCVD_Case__r.Product__c)</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
</CustomObject>